-*-outline-*-
$Id$

Jikes RVM NEWS -- History of significant changes

This file contains the release notes since Jikes RVM 2.0.0, released
on October 14, 2001,

*Jikes RVM 2.X.Y Release Notes (future)
** Highlights

** Bug fixes

** Other Notes

*** The Quick compiler has been deleted.  It is now available as a
    patch on the research tracker, or via older releases (2.3.4
    through 2.4.6).

*** The HPM (Hardware Performance Monitor) code has been deleted.
    It is now available on the research tracker (item 1613215),
    by svn diff -r11162:11161, or in releases through 2.4.6.


*Jikes RVM 2.4.6 Release Notes (released October 19, 2006)
** Highlights
*** The recommended version of GNU classpath for Jikes RVM 2.4.6 is 0.92.
    Earlier versions of GNU classpath are not supported.

*** A large scale restructuring of the source tree was performed 
    to prepare for making it easier to develop Jikes RVM using Eclipse.
    All files except for the Java source to Jikes RVM itself was moved
    out of the RVM_ROOT/rvm directory.  RVM_ROOT/rvm itself has not yet
    been reorganized so that package/directory structures match, but we 
    anticipate this happening in the near future.  

*** Major refactoring of VM<->MM interface

*** MMTk: Added nurseries to each LOS and created a distinct "primitive large
    object space" (PLOS).  

*** The optimizing compiler is now reentrant and a command line options
    to enable parallel bootimage compilation has been added to jbuild 
    (-numThreads=<n>).

*** Updates and improvements to GCspy support (patch 1576064).

** Bug fixes
   Too many to list individually in the release notes. Yeah!
   Overall a significant increase in system stability since 2.4.5.  
   See svnlog -r10694:10905 for the gory details.

** Other Notes

*** Change bootimage options for the opt compiler to use default static 
    inlining heurisitcs (instead of being more aggressive).  This reduces 